--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -76,17 +76,32 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-    const category = document.querySelector('.mw-category');
-    const links = Array.from(category.querySelectorAll('a'));
-    //convert nodelist to array
-    const de = links.map((link)=>link.textContent);
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // //convert nodelist to array
+    // let de = links
+    //             .map((link)=>link.textContent)
+    //             .filter((name)=>name.includes("de"));
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    let lastName = people
+      .map((person) => (person.slice(0, person.indexOf(" ")) + person.slice(person.indexOf(" "))))
+      .sort();
+    console.log(lastName);
+
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
-
+    // the accumulator value is a object here
+    let tally = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+    console.log(tally);
   </script>
 </body>
 
